--- a/ddec-2021/css/style.css
+++ b/ddec-2021/css/style.css
@@ -1,5 +1,9 @@
+body {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 18px;
+    }
 h1 {
-    color: aqua;
+    color: rgb(130, 183, 243);
 }
 address { 
          color:blue
