--- a/ddec-2021/css/style.css
+++ b/ddec-2021/css/style.css
@@ -11,3 +11,15 @@ address {
 footer { 
         color: blue;
      } 
+h1 {
+         color:rgb(130, 183, 243)
+        }
+        
+h1 {
+          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-size: 40px;
+    }
+    main
+    {
+      image;
+    }
