--- a/ddec-2021/css/style.css
+++ b/ddec-2021/css/style.css
@@ -12,7 +12,7 @@ footer {
         color: blue;
      } 
 h1 {
-         color:rgb(130, 183, 243)
+         color: slategrey;
         }
         
 h1 {
