--- a/ddec-2021/css/style.css
+++ b/ddec-2021/css/style.css
@@ -1,9 +1,10 @@
 body {
-      font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
       font-size: 18px;
     }
 h1 {
-    color: rgb(130, 183, 243);
+    color: rgb(11, 16, 22);
 }
 address { 
          color:blue
@@ -16,7 +17,8 @@ h1 {
         }
         
 h1 {
-          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
       font-size: 40px;
     }
     main
