--- a/ddec-2021/css/style.css
+++ b/ddec-2021/css/style.css
@@ -13,7 +13,7 @@ footer {
         color: blue;
      } 
 h1 {
-         color: slategrey;
+         color: rgb(30, 36, 43);
         }
         
 h1 {
